fixed local kubernetes config issue, communication between pods remain

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   student_service:
-    image: devops/student_service
+    image: mifsudaleandro/student_service
     build:
       dockerfile: ./Dockerfile
     restart: unless-stopped
