--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
       run: |
         docker run -d -e 8080:8080 -host=172.17.0.2 $REPO_NAME/$IMAGE_NAME:latest && \
           docker ps && sleep 5
+    - name: run mongo
+      run: |
+        docker run -d -e 27017:27017 -host=172.17.0.2 mongo:4 && \
+        docker ps && sleep 5
     - name: Run API Tests
       id: run-newman
       uses: anthonyvscode/newman-action@v1
