--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,7 @@ jobs:
         docker build . -t $REPO_NAME/$IMAGE_NAME
     - name: run docker
       run: |
-        docker run -d -e 8080:8080 -host=172.17.0.2 $REPO_NAME/$IMAGE_NAME:latest && \
-          docker ps && sleep 5
-    - name: run mongo
-      run: |
-        docker run -d -e 27017:27017 -host=172.17.0.2 mongo:4 && \
+       docker compose up -d && \
         docker ps && sleep 5
     - name: Run API Tests
       id: run-newman
